--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-html5video": "^2.5.1",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.1.0",
